# tmd

./: .clang-format  .gitignore  .prettierrc  .pylintrc  Akima.ipynb  Create_tables.ipynb  OPE_EVO_notorch.ipynb  OPE_EVO_torch.ipynb  OPE_notorch.ipynb  README.md  refactoring_summary.md  reference_clean_outputs.pkl  test_refactored_vs_reference.py
1d/coll_pdfs/: MMHT2014lo68cl_at_init_scale_Q_1.0.txt  MMHT2014lo68cl_pdfs_at_Q_100.txt  alphas_at_LO.txt
1d/qcdlib/: cfg.py  special.py
1d/qcf/: qcd_ff_1d.py
docs/: indentconfig.yaml  sidis_gluon_emission_diagram.tex  sidis_handbag_diagram.tex  sidis_wilson_line.tex  tmd_research.tex  tmds.tex
interpol/: 2Dinterp_gridSample.ipynb  Akima.ipynb
map/: AnalyticSIDISCrossSect.ipynb  TestfNP.ipynb  apfelpy_tests.ipynb  create_fNP.ipynb  fNP_tests.ipynb  sidis_apfelpy.ipynb  sidis_computation.py  sidis_computation_pytorch.py  sidis_crossect_torch.py  sidistorchcheckpoint.py
map/config/: config.yaml
map/cpp/: CMakeLists.txt  README.md  SIDISCrossSectionData.cc  SIDISCrossSectionKinem.cc  SIDISMultiplicities.cc
map/cpp/data/: datasets.yaml
map/cpp/temp/: MAP24_FD.h  SIDISCrossSectionAI.cc  SIDISMultiplicities.cc
map/docs/: fNP.md  fit_fnp_synthetic.md  flavor_blind_fnp_system.md  map_crossect_torch.md  parameter_masking.md  sidis.md  sidis_crossect_torch.md
map/docs/tex/: biblio.bib
map/from_cpp/: MAP22g52.h  SIDISMultiplicities.cc
map/inputs/: config.yaml  fNPconfig.yaml  fNPconfig_flavor_blind.yaml  fNPconfig_flavor_dep.yaml  fNPconfig_test.yaml  kinematics.yaml  kinematics_200pts.yaml
map/modules/: fNP.py  fNP_old.py  fnp_base.py  fnp_base_flavor_blind.py  fnp_base_flavor_dep.py  fnp_factory.py  fnp_manager.py  fnp_manager_flavor_blind.py  sidis.py  sidis_computation.py  sidis_computation_improved.py  utilities.py
map/modules/utilities/: __init__.py  colors.py  utilities.py
map/sidis/: SIDIS_apfelpy.ipynb  results.yaml  run_sidis_test.py
map/sidis/config/: config.yaml
map/sidis/docs/: OGATA_INTEGRATION_EXPLANATION.md  README.md
map/temp_from_cpp/: SIDISMultiplicities.cc  pywrap.cc
map/tests/: Ogata_test.ipynb  TestfNP.ipynb  compare_standard_vs_flavor_blind.py  fit_fnp_synthetic.py  fit_fnp_synthetic_flavor_blind.py  main_tests.py  test_flavor_blind_simple.py  test_fnp.py  test_fnp_modular.py  test_integrations.py  test_parameter_masking.py  test_sidis_parameter_masking.py  tmd_Fnp.ipynb
map/tmds/: CollinsSoperKernel  CollinsSoperKernel.cc  GridTMDbT  GridTMDbT.cc  MAP24FDParameters.yaml  Makefile  PV17Parameters.yaml  config.yaml
map_benchmark/: sidis_apfelpy.ipynb
map_benchmark/modules/: map24fnp.py
ope/: Generate_OPE_tables.ipynb  OPE_EVO_notorch.ipynb
ope/tables/: evo_Q0toQ_bTindependent.pth  evo_Q0toQ_info.pth  evo_info.pth  evo_toQ0.pth
qcdlib/: alphaS.py  alphaS_dev.py  cfg.py  dglap.py  eweak.py  mellin.py  params.py  special.py
qcf/: qcd_qcf_1d.py
sidis/: Calculation_development_and_checks.ipynb  __init__.py  config.yaml  main.py  requirements.txt  sidis_crossect_torch.py
sidis/cards/: fNPconfig_base.yaml  fNPconfig_base_flavor_blind.yaml  fNPconfig_base_flavor_dep.yaml  fNPconfig_base_flexible.yaml  fNPconfig_flav_blind_std.yaml  fNPconfig_flav_dep_std.yaml  fNPconfig_pdf_ff_sivers.yaml  fNPconfig_pdf_ff_sivers_av.yaml  fNPconfig_simple.yaml
sidis/cpp/: SIDISCrossSectionData.cc  SIDISCrossSectionKinem.cc  build.sh
sidis/docs/: DGLAP_evolution_overview.md  README.md  fnp_implemented_combos.md  fnp_py_file_structure.md  fnp_system.md  sidis_crossect_torch.md
sidis/inputs/: kinematics.yaml
sidis/model/: EIC.py  __init__.py  evolution.py  evolution_events.py  fnp_base.py  fnp_base_flavor_blind.py  fnp_base_flavor_dep.py  fnp_base_flexible.py  fnp_config.py  fnp_factory.py  fnp_flexible.py  fnp_linked_params.py  fnp_manager.py  fnp_simple.py  ogata.py  ogata1test.py  ope.py  qcf0_tmd.py  structure_functions.py  tmd_builder.py  unpolarized_wrapper.py  utils.py
sidis/model/fnp/: fnp_evolution.py  qiu_sterman.py  sivers.py  tmdff.py  tmdpdf.py
sidis/one_d/: __init__.py  qcd_ff_1d.py  qcd_qcf_1d.py
sidis/ope/: OPE.py  README_OPE_grids.md  __init__.py  generate_grids.py  pdf_ff_params.txt
sidis/qcdlib/: __init__.py  alphaS.py  alphaS_dev.py  cfg.py  config_loader.py  dglap_dev.py  evolution_precalcs.py  eweak.py  kernels.py  mellin.py  params.py  special.py  tmdmodel.py
sidis/tests/: MockDataCrossSection.ipynb  MockEventCrossSection.ipynb  Ogata_test.ipynb  TestfNP.ipynb  analyze_fit.ipynb  ap_collinear_pdf_values.py  fit_fnp_synthetic.py  generate_mock_events.py  generate_mock_kinematics.py  main_with_minimization.py  plots_and_studies.ipynb  run_cross_section.py  run_cross_section_from_mock.py  runfit.py  test_error_formatting.py  test_model_flexible.ipynb  test_ogata_option.py  tmd_Fnp.ipynb
sidis/tests/events/: cross_section_events_1000.pt  cross_section_events_1000.yaml  cross_section_events_10000.pt  cross_section_events_10000.yaml
sidis/tests/fitresults/: fitresults.yaml  loss.yaml
sidis/tests/fitresults_example/: parameters.yaml
sidis/tests/inputs/: mock_events_1000_seed_42.pt
sidis/utilities/: __init__.py  card_path.py  colors.py
spin/: README.md  Transversity.nb  __init__.py  alphaS.py  base.py  collins.py  default_params.py  dglap.py  evolution.py  fit.py  flavors.py  input_params.py  kernels.py  params.py  pdis.py  qiu_sterman.py  tmds.py  tools.py  transversity.py
spin/docs/: qiu_sterman_evolution.md  transversity_collins_evolution.md
spin/tests/: test_evolution.py  test_kernels.py  test_lhapdf_io.py  test_parameterizations.py  test_validation_smoke.py
spin/validation/: compare_to_transversity_collins_paper.py  inputs.py  kernel_diagnostics.py  lhapdf_io.py  validate_qiu_sterman_evolution.py  validate_transversity_collins_physics.py
tables/: OPE.pth  OPE_Q0_info.pth  OPE_info.pth  evoQ0toQ_bTindependent_info.pth  evo_Q0toQ_bTdependent.pth  evo_Q0toQ_bTdependent_info.pth  evo_toQ0_info.pth
tests/: ap_pdf_values.py
tmdgrids/: MAP22Parameters.yaml  MAP24FIParameters.yaml  MAP24HDParameters.yaml
tools/: fit_fnp_synthetic.py  tools.py
(+2 files in other folders)
